--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -13,3 +13,8 @@ datamodel: datamodel.prisma
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
+
+# Automated scriptings
+hooks:
+  post-deploy:
+    - prisma generate
